--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 651219667943292934
 textchannel = 651219667943292932
 ladderchannel = 
 jungsanchannel = 
