--- a/boss.ini
+++ b/boss.ini
@@ -1,30 +1,30 @@
 ----- 일반보스 -----
-bossname = 기감
+bossname = 이블린
 gentime = 1:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 거드
-gentime = 3:00
+bossname = 레플리카1
+gentime = 8:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 이프
-gentime = 2:00
+bossname = 레플리카2
+gentime = 8:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 마요
-gentime = 3:00
+bossname = 레플리카3
+gentime = 8:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 피닉
-gentime = 6:53
+bossname = 레플리카4
+gentime = 8:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
