--- a/boss.ini
+++ b/boss.ini
@@ -5,74 +5,74 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 레플리카1
+bossname = 레프리카1
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 레플리카2
+bossname = 레프리카2
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 레플리카3
+bossname = 레프리카3
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 레플리카4
+bossname = 레리카4
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 트로이카
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 벨프스
 gentime = 7:30
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 이프리나
 gentime = 7:30
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 베네딕트
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 피코
 gentime = 5:50
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 라파커스
 gentime = 6:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 베르키
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 라빌린
 gentime = 8:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
