--- a/boss.ini
+++ b/boss.ini
@@ -23,7 +23,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 레리카4
+bossname = 레프리카4
 gentime = 8:00
 nogencheck = 0
 before_alert_ment = 입니다
