--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 651219667943292934
-textchannel = 651219667943292932
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 
