--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 651255686495207439
 textchannel = 651255686495207438
 ladderchannel = 
 jungsanchannel = 
