--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 651255686495207439
-textchannel = 651255686495207438
+voicechannel =
+textchannel =
 ladderchannel = 
 jungsanchannel = 
 
