--- a/boss.ini
+++ b/boss.ini
@@ -1,4 +1,10 @@
 ----- 일반보스 -----
+bossname = 이블린성채
+gentime = 0:39
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
 bossname = 이블린
 gentime = 0:39
 nogencheck = 0
@@ -60,7 +66,7 @@ before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 라파커스
-gentime = 6:00
+gentime = 5:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
