--- a/boss.ini
+++ b/boss.ini
@@ -5,7 +5,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 이블린
+bossname = 이블린평야
 gentime = 0:39
 nogencheck = 0
 before_alert_ment = 입니다
