--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,13 +1,13 @@
 timezone = 9
 
-voicechannel =
-textchannel =
+voicechannel = 649265106756304919
+textchannel = 649265106756304918
 ladderchannel = 
 jungsanchannel = 
 
 before_alert = 1
 before_alert1 = 5
-mungChk = 10
+mungChk = 0
 
 bossInfoNum = 3
 
