--- a/boss.ini
+++ b/boss.ini
@@ -1,12 +1,12 @@
 ----- 일반보스 -----
 bossname = 이블린성채
-gentime = 00:39
+gentime = 00:40
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 이블린평야
-gentime = 00:39
+gentime = 00:40
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
@@ -79,6 +79,114 @@ alert_ment = 입니다. 어여오세요
 
 bossname = 라빌린
 gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 그을음가도
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 그을음간혈천
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 돌먼지보급로
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 돌먼지폐광
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 메마른수렁
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 적만한폭포
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 회색지열지대
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 회색황무지
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 잿바람능선
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 잿바람수송로
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 태고군락지
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 파수꾼의땅
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 비명소리웅덩이
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 비명소리광산
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 융해위험지대
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 침략자소굴
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 배반자소굴
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 데커스용암지대
+gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
