--- a/boss.ini
+++ b/boss.ini
@@ -89,7 +89,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 그을음간혈천
+bossname = 그을음간헐천
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
