--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 649265106756304919
 textchannel = 649265106756304918
-ladderchannel = 
+ladderchannel = 651296437291843595
 jungsanchannel = 
 
 before_alert = 1
