--- a/boss.ini
+++ b/boss.ini
@@ -286,3 +286,27 @@ gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+
+bossname = 에르드
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 렌티
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 바르돌
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 리비에
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
