--- a/boss.ini
+++ b/boss.ini
@@ -376,3 +376,51 @@ gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+
+bossname = 물줄기1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 물줄기2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 물줄기3
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 물줄기4
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 마루1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 마루2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 마루3
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 마루4
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
